refacto: change add data in country detail.
