# src/main/java/com/jve/app/infrastructure/controller/model/dto/CountryDto.java
@@ -1,0 +1,231 @@
+package com.jve.app.infrastructure.controller.model.dto;
+
+public class CountryDto {
+
+    private Long id;
+    private String name;
+    private String iso2;
+    private String iso3;
+    private Integer numericCode;
+    private Integer phoneCode;
+    private String capitalName;
+    private String currency;
+    private String currencyName;
+    private String currencySymbol;
+    private String tld;
+    private String nativeName;
+    private String region;
+    private Integer regionId;
+    private String subregion;
+    private Integer subregionId;
+    private String nationality;
+    private String timezones;
+    private Integer latitude;
+    private Integer longitude;
+    private String emoji;
+    private String emojiU;
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getIso2() {
+        return iso2;
+    }
+
+    public void setIso2(String iso2) {
+        this.iso2 = iso2;
+    }
+
+    public String getIso3() {
+        return iso3;
+    }
+
+    public void setIso3(String iso3) {
+        this.iso3 = iso3;
+    }
+
+    public Integer getNumericCode() {
+        return numericCode;
+    }
+
+    public void setNumericCode(Integer numericCode) {
+        this.numericCode = numericCode;
+    }
+
+    public Integer getPhoneCode() {
+        return phoneCode;
+    }
+
+    public void setPhoneCode(Integer phoneCode) {
+        this.phoneCode = phoneCode;
+    }
+
+    public String getCapitalName() {
+        return capitalName;
+    }
+
+    public void setCapitalName(String capitalName) {
+        this.capitalName = capitalName;
+    }
+
+    public String getCurrency() {
+        return currency;
+    }
+
+    public void setCurrency(String currency) {
+        this.currency = currency;
+    }
+
+    public String getCurrencyName() {
+        return currencyName;
+    }
+
+    public void setCurrencyName(String currencyName) {
+        this.currencyName = currencyName;
+    }
+
+    public String getCurrencySymbol() {
+        return currencySymbol;
+    }
+
+    public void setCurrencySymbol(String currencySymbol) {
+        this.currencySymbol = currencySymbol;
+    }
+
+    public String getTld() {
+        return tld;
+    }
+
+    public void setTld(String tld) {
+        this.tld = tld;
+    }
+
+    public String getNativeName() {
+        return nativeName;
+    }
+
+    public void setNativeName(String nativeName) {
+        this.nativeName = nativeName;
+    }
+
+    public String getRegion() {
+        return region;
+    }
+
+    public void setRegion(String region) {
+        this.region = region;
+    }
+
+    public Integer getRegionId() {
+        return regionId;
+    }
+
+    public void setRegionId(Integer regionId) {
+        this.regionId = regionId;
+    }
+
+    public String getSubregion() {
+        return subregion;
+    }
+
+    public void setSubregion(String subregion) {
+        this.subregion = subregion;
+    }
+
+    public Integer getSubregionId() {
+        return subregionId;
+    }
+
+    public void setSubregionId(Integer subregionId) {
+        this.subregionId = subregionId;
+    }
+
+    public String getNationality() {
+        return nationality;
+    }
+
+    public void setNationality(String nationality) {
+        this.nationality = nationality;
+    }
+
+    public String getTimezones() {
+        return timezones;
+    }
+
+    public void setTimezones(String timezones) {
+        this.timezones = timezones;
+    }
+
+    public Integer getLatitude() {
+        return latitude;
+    }
+
+    public void setLatitude(Integer latitude) {
+        this.latitude = latitude;
+    }
+
+    public Integer getLongitude() {
+        return longitude;
+    }
+
+    public void setLongitude(Integer longitude) {
+        this.longitude = longitude;
+    }
+
+    public String getEmoji() {
+        return emoji;
+    }
+
+    public void setEmoji(String emoji) {
+        this.emoji = emoji;
+    }
+
+    public String getEmojiU() {
+        return emojiU;
+    }
+
+    public void setEmojiU(String emojiU) {
+        this.emojiU = emojiU;
+    }
+
+    @Override
+    public String toString() {
+        return "CountryDto{" +
+                "id=" + id +
+                ", name='" + name + '\'' +
+                ", iso2='" + iso2 + '\'' +
+                ", iso3='" + iso3 + '\'' +
+                ", numericCode=" + numericCode +
+                ", phoneCode=" + phoneCode +
+                ", capitalName='" + capitalName + '\'' +
+                ", currency='" + currency + '\'' +
+                ", currencyName='" + currencyName + '\'' +
+                ", currencySymbol='" + currencySymbol + '\'' +
+                ", tld='" + tld + '\'' +
+                ", nativeName='" + nativeName + '\'' +
+                ", region='" + region + '\'' +
+                ", regionId=" + regionId +
+                ", subregion='" + subregion + '\'' +
+                ", subregionId=" + subregionId +
+                ", nationality=" + nationality +
+                ", timezones=" + timezones +
+                ", latitude=" + latitude +
+                ", longitude=" + longitude +
+                ", emoji='" + emoji + '\'' +
+                ", emojiU='" + emojiU + '\'' +
+                '}';
+    }
+}
