# src/main/resources/openapi.yaml
@@ -81,15 +81,67 @@ components:
     CountryDetailDto:
       type: object
       properties:
+        country:
+          $ref: '#/components/schemas/CountryDto'
+        states:
+          uniqueItems: true
+          type: array
+          items:
+            $ref: '#/components/schemas/StateDto'
+    CountryDto:
+      type: object
+      properties:
         id:
           type: integer
           format: int64
         name:
           type: string
-        states:
-          type: array
-          items:
-            $ref: '#/components/schemas/StateDto'
+        iso2:
+          type: string
+        iso3:
+          type: string
+        numericCode:
+          type: integer
+          format: int32
+        phoneCode:
+          type: integer
+          format: int32
+        capitalName:
+          type: string
+        currency:
+          type: string
+        currencyName:
+          type: string
+        currencySymbol:
+          type: string
+        tld:
+          type: string
+        nativeName:
+          type: string
+        region:
+          type: string
+        regionId:
+          type: integer
+          format: int32
+        subregion:
+          type: string
+        subregionId:
+          type: integer
+          format: int32
+        nationality:
+          type: string
+        timezones:
+          type: string
+        latitude:
+          type: integer
+          format: int32
+        longitude:
+          type: integer
+          format: int32
+        emoji:
+          type: string
+        emojiU:
+          type: string
     StateDto:
       type: object
       properties:
